# proy_fireye_ros2

./: README.md
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/proy_fireye/share/proy_fireye/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/proy_fireye/share/proy_fireye/cmake/: proy_fireyeConfig.cmake
log/: latest_build
proy_fireye/: CMakeLists.txt  package.xml
proy_fireye_bags/test_mision_01/: metadata.yaml
proy_fireye_bags/test_mision_02/: metadata.yaml
proy_fireye_interfaces/: CMakeLists.txt  package.xml
proy_fireye_interfaces/srv/: MiMovimientoMsg.srv
proy_fireye_movimiento/: package.xml  setup.cfg  setup.py
proy_fireye_movimiento/launch/: movimiento_servicio.launch.py
proy_fireye_movimiento/proy_fireye_movimiento/: movimiento_servicio.py
proy_fireye_mundo/: CMakeLists.txt
proy_fireye_mundo/launch/: fireye_mundo.launch.py
proy_fireye_mundo/src/: obstacle1.cpp  obstacle2.cpp  obstacles.cpp  turtlebot3_drive.cpp
proy_fireye_mundo/worlds/: my_world.world
proy_fireye_ros2/: CMakeLists.txt  package.xml
proy_fireye_slam/: package.xml  setup.cfg  setup.py
proy_fireye_slam/launch/: fireye_mision.launch.py  my_map_server.launch.py  my_tb3_navigator.launch.py
proy_fireye_slam/map/: my_map.pgm  my_map.yaml
proy_fireye_slam/proy_fireye_slam/: fireye_mision_servicio.py  fireye_mission_bt.py  follow_waypoints.py  initial_pose_pub.py  nav_to_pose.py
proy_fireye_slam/rviz/: tb3_navigation2.rviz
proy_fireye_slam/test/: test_behavior_tree.py  (+1 more)
(+22 files in other folders)
