<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proy_fireye</name>
  <version>1.0.0</version>
  <description>Metapaquete que agrupa las funcionalidades del Proyecto Fireye</description>
  <maintainer email="gbursal@upv.es">Tu Nombre</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Lista de paquetes que integran el proyecto -->
  <exec_depend>proy_fireye_mundo</exec_depend>
  <exec_depend>proy_fireye_slam</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>